--- a/Proyecto/Game.vcxproj
+++ b/Proyecto/Game.vcxproj
@@ -71,16 +71,20 @@
   <ItemGroup>
     <ClCompile Include="..\Source\main.cpp" />
     <ClCompile Include="..\Source\Game.cpp" />
-    <ClCompile Include="..\Source\Nave.cpp" />
+    <ClCompile Include="..\Source\nave.cpp" />
+    <ClCompile Include="..\Source\Objeto.cpp" />
     <ClCompile Include="..\Source\Sprite.cpp" />
     <ClCompile Include="..\Source\SpriteDef.cpp" />
+    <ClCompile Include="..\Source\Stage.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\Config.h" />
     <ClInclude Include="..\Source\Game.h" />
-    <ClInclude Include="..\Source\Nave.h" />
+    <ClInclude Include="..\Source\nave.h" />
+    <ClInclude Include="..\Source\Objeto.h" />
     <ClInclude Include="..\Source\Sprite.h" />
     <ClInclude Include="..\Source\SpriteDef.h" />
+    <ClInclude Include="..\Source\Stage.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Ejecutable\Readme.txt" />
